Tue Oct 28 15:53:42 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Invocation_Adapter.h:
	* tao/Invocation_Adapter.inl:
	* tao/Invocation_Adapter.h:
	* tao/Invocation_Adapter.inl:
	* tao/DynamicInterface/DII_Invocation_Adapter.cpp:
	* tao/DynamicInterface/DII_Invocation_Adapter.h:
	* tao/Messaging/Asynch_Invocation_Adapter.cpp:
	* tao/Messaging/Asynch_Invocation_Adapter.h
	  
	  Added const qualifier to the operation names. Not sure how this
	  got missed. Thought I had done this once before!

Tue Oct 28 14:06:52 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/tests/AVStreams/Latency/pong.cpp: 

	  #included ORB.h and removed corba.h

	* tao/Invocation_Adapter.h: Cosmetic fixes. 

	* TAO_IDL/be/be_visitor_valuetype/any_op_cs.cpp:

	  Implementation of the insertion operators for the valuetypes
	  generated the ACE_INLINE macro. Removed generation of the
	  ACE_INLINE macro. 

Tue Oct 28 13:48:50 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Invocation_Adapter.h: 

	  Added some documentation. More stuff needs to be added.
	
	* tao/Profile_Transport_Resolver.cpp: 

	  Cosmetic fix.

	* tao/Messaging/MessagingC.cpp:
	* tao/ObjRefTemplate/ObjectReferenceTemplateC.cpp:

          Fixed a couple of fuzz errors that slipped.

Tue Oct 28 13:33:58 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/IORInterceptor/TAO_IORInterceptor.dsp;

          Added link to Valuetype library.

Tue Oct 28 13:21:43 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/ORB.cpp:

          Replaced a TypeCode::_nil () return value with 0, similar to other
          locations in this file, to avoid dependency on Typecode.h.

        * tao/ORB.h:

          Cosmetic changes.

        * tao/ORB_Core.cpp:

          Fixed misstypes of TAO::TAO_INVOKE_SYSTEM_EXCEPTION.

        * tao/ObjRefTemplate/TAO_ObjRefTemplate_Static.dsp:
        * tao/Valuetype/TAO_Valuetype_Static.dsp:
